# botc-solvers

./: .gitignore  MODEL_DECISIONS.md  README.md  index.html  package.json  playwright.config.ts  pyproject.toml  trouble-brewing-puzzle.als  tsconfig.browser.json  tsconfig.config.json  tsconfig.json  tsconfig.playwright.json  tsconfig.test.json  vite.config.ts
.claude/: launch.json
assets/: index--kIAq_oJ.js  index-29U95cCu.js  index-4cD9uHqj.js  index-5h9N4Qxy.css  index-7teIjBXp.js  index-AjcmpzrD.js  index-B6g45uts.js  index-B7JFRZ_t.js  index-B82uDxus.js  index-BCODWiRV.js  index-BIvO4Sya.js  index-BPM5CBD_.js  index-BZdwJbMz.js  index-B_ZB7qeY.js  index-Bj8FqkkJ.js  index-BjqafEl0.js  index-Bl_bH11V.js  index-BwS5Mgh6.js  index-C2G8yejs.js  index-C7ANitxM.js  index-CDzAcnUO.js  index-CFuc96nP.js  index-Ca5nMvy-.js  index-Cexx6qAo.js  index-CgaTKE25.js  index-CkN0_FPf.js  index-Cve5eHRD.js  index-D3rJYJpY.js  index-D4X9lhBz.js  index-D4t8q_Vs.js  index-D8xEJD4_.js  index-DAzUkYhA.js  index-DCWPApiR.js  index-DEkIXE-s.js  index-DMFxHnGB.css  index-DVsEJ8i0.js  index-DW2MKrQw.js  index-DfPCoVAl.js  index-DfiGVFmR.js  index-DkRyc7Zi.js  (+43 more)
puzzles/: 01_sober_savant.py  02_come_fly_with_me.py  03a_not_throwing_away_my_shot.py  03b_not_throwing_away_my_shot.py  README.md  puzzle_01_sober_savant.py  puzzle_02_come_fly_with_me.py  puzzle_03a_not_throwing_away_my_shot.py  puzzle_03b_not_throwing_away_my_shot.py  puzzle_04_the_many_headed_monster.py
python/: README.md  pyproject.toml
scripts/: generate-puzzle-catalog.ts  search-bmr.ts
src/: App.tsx  characters.ts  core.ts  (+6 more)
(+699 files in other folders)
