[project]
name = "botc-solver"
version = "0.1.0"
description = "Constraint-solving helpers for Blood on the Clocktower puzzles."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ortools>=9.15.6755",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/botc_solver"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "puzzles", "tests"]
pythonVersion = "3.14"
venv = ".venv"
venvPath = "."
